[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=3.4.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[project]
name = "asimov-pesummary"
dynamic = ["version"]
authors = [
    { name = "Daniel Williams", email = "daniel.williams@ligo.org" },
]
description = "PESummary pipeline integration for Asimov"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Natural Language :: English",
]
requires-python = ">=3.9"
dependencies = [
    "asimov>=0.7.0a1",
    "pesummary",
]

[project.optional-dependencies]
asimov = [
    "asimov>=0.7.0a1",
]
docs = [
    "sphinx",
    "kentigern >= 0.3.0",
    "numpydoc",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[project.entry-points."asimov.pipelines"]
pesummary = "asimov_pesummary:PESummary"

[project.urls]
"Source code" = "https://git.ligo.org/asimov/asimov-pesummary"

[tool.setuptools]
packages = ["asimov_pesummary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=asimov_pesummary --cov-report=html --cov-report=term"
